<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Login.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/login_fondo"
        android:orientation="vertical">

        <ImageView
            android:layout_width="145dp"
            android:layout_height="112dp"
            android:src="@drawable/educonnect_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="EduConnect"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textColor="@color/selected"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="Más que una aplicación, una herramienta para el éxito educativo."
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="16dp"
        android:background="@drawable/corner_radios_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/poppins_bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCorreo"
                    android:layout_width="match_parent"
                    android:layout_marginTop="24dp"
                    style="@style/Widget.Design.TextInputLayout"
                    app:helperText="@string/helperUser"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:hint="@string/User"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_marginTop="24dp"
                    style="@style/Widget.Design.TextInputLayout"
                    app:endIconMode="password_toggle"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/poppins_light"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/Password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnEntrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/white"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="50dp"
                    android:textAllCaps="false"
                    android:text="@string/Iniciar" />
            </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>