<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.docente.AgregarPreguntaExamen">
    <LinearLayout
        android:id="@+id/barTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llRegresarPregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_volver"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:textColor="@color/primary"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/app_name"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntas"
            android:textSize="36sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPreguntasElegir"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>



            <androidx.cardview.widget.CardView
                android:id="@+id/cvCrearPregunta"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/primary"
                android:layout_gravity="bottom"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/guardar_preguntas"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

</LinearLayout>