<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/secondary"/>

            <TextView
                android:id="@+id/tvRespuestaServidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_exitoso"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Titulo"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textAlignment="inherit"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/secondary"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_limite"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/selected"/>

                    <TextView
                        android:id="@+id/tvFechaLimite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Titulo"
                        android:layout_marginStart="10dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/selected"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Titulo"
                    android:layout_marginTop="10dp"
                    android:textAlignment="inherit"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/secondary"/>


            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvAceptar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/primary"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_weight="1"
                        android:text="@string/aceptar"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>